- do not use white as background color